[package]
name = "sdboot"
version = "0.1.0"
edition = "2021"
description = "Systemd-boot EFI variables manager"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# working with EFI variables
efivar = "1.4.0"
uuid = "1.4.1"

# logging
log = "0.4.14"

# error handling
anyhow = "1.0.44"


[target.'cfg(target_os = "linux")'.dependencies]
# chattr
libc = "0.2.105"

# ioctl
nix = "0.26"
